# cooking-streamline

./: README.md
recepy-streamline/: CMakeLists.txt  cookbooklocationdialog.cpp  cookbookmenu.cpp  cookbookmenu.hpp  cookingmenu.cpp  cookingmenu.hpp  cookingmenubar.cpp  cookingmenubar.hpp  directory_path.h.in  inputdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  recepy.cpp  recepy.h
recepy-streamline/cookbooks/: list.txt
recepy-streamline/cookbooks/Italien/: Garlic-Bread.recepy  Putanesca.recepy  Simple-Pasta.testrec  list.txt
recepy-streamline/src/: CMakeLists.txt  cookingmenubar.cpp  main.cpp  mainwindow.cpp  newrecepydialog.cpp  qcookbook.cpp  qcookingtimer.cpp  qrecepy.cpp  qtimerstack.cpp  recepy.cpp
recepy-streamline/src/include/: cookbooklocationdialog.hpp  cookingmenubar.hpp  inputdialog.hpp  mainwindow.h  newrecepydialog.hpp  qcookbook.hpp  qcookingtimer.hpp  qrecepy.hpp  qtimerstack.hpp  recepy.h
